# wasm-interop

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  _Makefile  input.cpp
rust-cpp-demo/: cargo.toml
rust-cpp-demo/src/: lib.rs
rustmath-demo/: .gitignore  Cargo.toml
rustmath-demo/src/: lib.rs
src/: codegen.rs  main.rs  parser.rs  utils.rs
src/codegens/: cpp_codegen.rs  mod.rs  rust_codegen.rs
src/parsers/: cpp_parser.rs  mod.rs  rs_parser.rs
src/templates/: cpp_demo.hbs  cpp_header.hbs  cpp_header.template  cpp_impl.template  cpp_makefile.hbs  cpp_source.hbs  makefile.template  rs_cargo.hbs  rs_lib.hbs
