[package]
name = "wasm-interop"
version = "0.1.0"
edition = "2024"

[dependencies]
syn = { version = "2.0", features = ["full", "visit"] }
quote = "1.0"
handlebars = "5.1"
serde = { version = "1.0", features = ["derive"] }
tree-sitter = "0.25.3"
tree-sitter-cpp = "0.23.4"
serde_json = "1.0"
regex = "1"

[build-dependencies]
cc = "*"